fixed issue with select2 dropdown result not visible

--- a/public/css/news.css
+++ b/public/css/news.css
@@ -228,3 +228,7 @@ img.imgDocThumbnail {
 .mcn-width-100 {
     width: 100%;
 }
+
+.select2-container.select2-container--default.select2-container--open {
+    z-index: 1040;
+}
